fixed alignment issues and redistributed for better use of space

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -744,7 +744,10 @@ hr{
 #side-slice{
   padding-right: 0px;
 }
-
+#view-top{
+  padding: 0;
+  margin: 0;
+}
 #loading-view{
   width: 100%;
   height: 100%;
